[package]
name = "jasmine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
readme = "README.md"
description = "Storing data like it's tea"
repository = "https://github.com/dignifiedquire/jasmine"

[dependencies]
xxhash-rust = { version = "0.8.4", features = ["xxh3"] }

[features]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "partition"
harness = false