[package]
name = "jasmine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
readme = "README.md"
description = "Storing data like it's tea"
repository = "https://github.com/dignifiedquire/jasmine"

[dependencies]
ahash = "0.7.6"
async-trait = "0.1.53"
eyre = "0.6.7"
futures = "0.3.21"
glommio = "0.7.0"
tracing = "0.1.34"
xxhash-rust = { version = "0.8.4", features = ["xxh3"] }
zerocopy = "0.6.1"

[features]

[dev-dependencies]
blake3 = "1.3.1"
criterion = { version = "0.3.5", features = ["async"] }
tempfile = "3.3.0"
tracing-subscriber = "0.3.11"

[[bench]]
name = "partition"
harness = false

[[bench]]
name = "vlog"
harness = false

[[bench]]
name = "sth"
harness = false

[[bench]]
name = "memlog"
harness = false

[[bench]]
name = "jasmine"
harness = false
